--- a/src/app.postcss
+++ b/src/app.postcss
@@ -5,24 +5,24 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @layer base {
-  body {
-    @apply text-zinc-600 dark:text-zinc-400;
-  }
+	body {
+		@apply text-zinc-600 dark:text-zinc-400 h-full overflow-hidden;
+	}
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    @apply text-zinc-900 dark:text-zinc-200;
-  }
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		@apply text-zinc-900 dark:text-zinc-200;
+	}
 
-  hr {
-    @apply border-zinc-100 dark:border-zinc-700/25;
-  }
+	hr {
+		@apply border-zinc-100 dark:border-zinc-700/25;
+	}
 }
 
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
