--- a/src/app.postcss
+++ b/src/app.postcss
@@ -6,7 +6,7 @@
 @import 'tailwindcss/utilities';
 @layer base {
 	body {
-		@apply text-zinc-600 dark:text-zinc-400 h-full overflow-hidden;
+		@apply text-zinc-600 dark:text-zinc-400 h-full;
 	}
 
 	h1,
