larger text on headings

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -18,7 +18,7 @@
 	h4,
 	h5,
 	h6 {
-		@apply text-zinc-900 dark:text-zinc-200 pt-6 pb-2;
+		@apply text-zinc-900 dark:text-zinc-200 pt-6 pb-2 text-2xl;
 	}
 
 	hr {
