[wip] change theme for Skeletons modern

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -9,8 +9,16 @@
 		@apply text-zinc-600 dark:text-zinc-400 h-full;
 	}
 
-	h1{
-		@apply text-zinc-900 dark:text-zinc-100 pt-6 pb-6;
+	h1 {
+		@apply text-zinc-900 dark:text-zinc-100 pt-6 pb-6 text-4xl;
+	}
+
+	h2 {
+		@apply text-2xl;
+	}
+
+	h3 {
+		@apply text-lg;
 	}
 
 	h2,
@@ -18,7 +26,7 @@
 	h4,
 	h5,
 	h6 {
-		@apply text-zinc-900 dark:text-zinc-200 pt-6 pb-2 text-2xl;
+		@apply text-zinc-900 dark:text-zinc-200 pt-6 pb-2;
 	}
 
 	hr {
@@ -27,5 +35,5 @@
 }
 
 a {
-	text-decoration: none;
+	@apply dark:text-cyan-400 text-cyan-800 hover:text-blue-600;
 }
