--- a/src/app.postcss
+++ b/src/app.postcss
@@ -10,15 +10,7 @@
 	}
 
 	h1 {
-		@apply text-zinc-900 dark:text-zinc-100 pt-6 pb-6 text-4xl;
-	}
-
-	h2 {
-		@apply text-2xl;
-	}
-
-	h3 {
-		@apply text-lg;
+		@apply text-zinc-900 dark:text-zinc-100;
 	}
 
 	h2,
@@ -26,7 +18,7 @@
 	h4,
 	h5,
 	h6 {
-		@apply text-zinc-900 dark:text-zinc-200 pt-6 pb-2;
+		@apply text-zinc-900 dark:text-zinc-200;
 	}
 
 	hr {
