--- a/src/app.postcss
+++ b/src/app.postcss
@@ -29,3 +29,13 @@
 a {
 	@apply dark:text-cyan-400 text-cyan-800 hover:text-blue-600;
 }
+
+html.dark .shiki,
+html.dark .shiki span {
+	color: var(--shiki-dark) !important;
+	background-color: var(--shiki-dark-bg) !important;
+	/* Optional, if you also want font styles */
+	font-style: var(--shiki-dark-font-style) !important;
+	font-weight: var(--shiki-dark-font-weight) !important;
+	text-decoration: var(--shiki-dark-text-decoration) !important;
+}
